--- a/components/ActivityIndicator/src/MaterialActivityIndicator.bundle/Resources/en.lproj/MaterialActivityIndicator.strings
+++ b/components/ActivityIndicator/src/MaterialActivityIndicator.bundle/Resources/en.lproj/MaterialActivityIndicator.strings
@@ -1,5 +1,8 @@
-/* Accessibility label for activity indicator in progress */
+/* Accessibility label for indeterminate activity indicator in progress */
 "MaterialActivityIndicatorInProgressAccessibilityLabel" = "In Progress";
+
+/* Accessibility label for indeterminate activity indicator in progress */
+"MaterialActivityIndicatorProgressCompletedAccessibilityLabel" = "%ld Percent Complete";
 
 /* Accessibility label for activity indicator progress halted */
 "MaterialActivityIndicatorProgressHaltedAccessibilityLabel" = "Progress Halted";
