Adding tab a11y string

--- a/components/BottomNavigation/src/MaterialBottomNavigation.bundle/Resources/en.lproj/MaterialBottomNavigation.strings
+++ b/components/BottomNavigation/src/MaterialBottomNavigation.bundle/Resources/en.lproj/MaterialBottomNavigation.strings
@@ -1,2 +1,3 @@
 /* Accessibility hint preposition for item number i of n. */
 "MaterialBottomNavigationItemCountAccessibilityHint" = "of";
+"MaterialBottomNavigationTabElementAccessibilityLabel" = "tab";
